# Seis2Rock

./: README.md  environment.yml  install_env.sh  pyproject.toml
data/: readme.md  smeaheia_synthetic.npz
notebooks/volve/: 01_Wavelet_Estimation_Well_NO_15_9_19_BT2.ipynb  02_Wavelet_Estimation_Well_NO_15_9_19_A.ipynb  03_Benchmark_Inversion_Synthetic_Well_NO_15_9_19_BT2.ipynb  04_Benchmark_Inversion_Synthetic_Well_NO_15_9_19_A.ipynb  05_Inversion_Well_NO_15_9_19_BT2.ipynb  06_Inversion_Well_NO_15_9_19_A.ipynb  12_3D_full_Inversion.ipynb
seis2rock/: Denoising_scalings.py  DnCNN_models.py  Logs.py  avo.py  elastic.py  fluid.py  gassmann.py  pem_seis2rock.py  poststack.py  seis2rock_functions.py  seis2rock_utils.py  solid.py
