[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "seis2rock"
authors = [
    {name = "Miguel Corrales", email = "miguel.corrales@kaust.edu.sa"},
]
description = "Data-Driven Direct Petrophysical Inversion of Prestack Seismic Data"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["inverse problems", "deep learning", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
        "numpy >= 1.23.3",
        "pylops >= 2.1.0",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}
